# mandelbrot

./: CMakeLists.txt  pyplot_draw.py  version.h.in
src/: CMakeLists.txt  datasplit.cpp  datasplit.hpp  main.cpp  mandelbrot.cpp  mandelbrot.hpp  util.cpp  util.hpp
src/backend/: CMakeLists.txt  mandelbrot.hpp  util.cpp
src/cli/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  main.cpp  mandelbrotWidget.cpp  mandelbrotWidget.hpp
